哭着把第二章写完了

--- a/bib/chap2.bib
+++ b/bib/chap2.bib
@@ -310,21 +310,15 @@ title = {{Diversity , stability and resilience of the human gut microbiota}},
 volume = {489},
 year = {2012}
 }
-@article{Panigrahi1996,
-abstract = {Necrotizing enterocolitis (NEC) is a serious gastrointestinal disorder of preterm infants. Other than an association with prematurity and gastrointestinal feeding, no single factor or mechanism has been consistently linked to this disease. We have previously demonstrated that Escherichia coli isolates obtained from the stool of infants with NEC caused NEC-like injury in a weanling rabbit ileal loop model; this injury, in turn, could he blocked by coinfection with selected Gram(+) bacteria (Enterococcus faecium) isolated from asymptomatic controls. Using Caco-2 cells in a trans-well system, we now demonstrate that the same E. coli isolates can cross epithelial cell monolayers in the absence of ultrastructural change or damage. These results with E. coli contrast with those seen with Salmonella typhimurium, which passed through the monolayer at a higher rate and were associated with striking ultrastructural damage. Transcytosis of E. coli was reduced 3-5- fold in the presence of E. faecium previously shown to block NEC-like injury in the loop model. There was a mild increase in the rate of E. coli transcytosis when studies were conducted with younger, undifferentiated cells; these immature cells had no brush border, had decreased production of brush border-specific enzymes, but retained well defined tight junctions, as demonstrated by transepithelial electrical resistance and electron microscopy. A further reduction/complete blockage of E. coli transcytosis was observed when E. faecium was used as the coinfectant in studies with these undifferentiated cells. We hypothesize that the ability of E. coli to cross epithelial cell layer is a critical initial step in the cascade of events which lead ultimately to NEC; blockage or reduction in E. coli transcytosis in the presence of certain Gram(+) organisms may play a significant role in prevention of NEC.},
-author = {Panigrahi, P and Bamford, P and Horvath, K and Morris, Jr and J.G and Gewolb, I H},
-doi = {10.1203/00006450-199609000-00009},
-issn = {0031-3998},
-journal = {Pediatric research},
-keywords = {Enterococcus faecalis,Escherichia coli,Salmonella typhimurium,article,colon adenocarcinoma,controlled study,electron microscopy,human,human cell,intestine brush border,necrotizing enterocolitis/et [Etiology],priority journal,tight junction,transcytosis},
-month = {sep},
-number = {3},
-pages = {415--421},
-pmid = {8865278},
-title = {{Escherichia coli transcytosis in a Caco-2 cell model: Implications in neonatal necrotizing enterocolitis.}},
-url = {http://sfx.scholarsportal.info/mcmaster?sid=OVID:embase{\&}id=pmid:{\&}id=doi:{\&}issn=0031-3998{\&}isbn={\&}volume=40{\&}issue=3{\&}spage=415{\&}pages=415-421{\&}date=1996{\&}title=Pediatric+Research{\&}atitle=Escherichia+coli+transcytosis+in+a+Caco-2+cell+model{\%}3A+Implications+in+neona},
-volume = {40},
-year = {1996}
+@article{panigrahi1996escherichia,
+  title={Escherichia coli Transcytosis in a Caco-2 Cell Model: Implications in Neonatal Necrotizing Enterocolitis1},
+  author={Panigrahi, Pinaki and Bamford, Penelope and Horvath, Karoly and Morris Jr, J Glenn and Gewolb, Ira H},
+  journal={Pediatric research},
+  volume={40},
+  number={3},
+  pages={415},
+  year={1996},
+  publisher={Nature Publishing Group}
 }
 @article{Dutta2014,
 abstract = {OBJECTIVE To study intestinal colonization patterns in very low birth weight infants in the first week of life in a neonatal intensive care unit. METHODS Meconium/stool specimens were obtained on days 1, 3, 5 and 7 from 38 very low-birth-weight infants in a level III neonatal intensive care unit. RESULTS On day 1, 45{\%} had sterile guts, and by day 3, all infants were colonized. E. coli, K. pneumoniae and Enterococcus fecalis were predominant organisms. Lactobacilli was found in one isolate and Bifidobacteria was not detected during the study period. There was an association between formula feeding and E. coli colonization. CONCLUSION Very low birth weight infants admitted in neonatal intensive care units have abnormal intestinal colonization patterns.},
@@ -356,18 +350,14 @@ url = {http://www.nature.com/articles/nrgastro.2012.44},
 volume = {9},
 year = {2012}
 }
-@misc{Hosny2017a,
-abstract = {Necrotizing enterocolitis (NEC) remains a leading cause of morbidity and mortality, affecting primarily preterm neonates. The pathogenesis of this intestinal disease appears to be linked to the disruption or delay of bacterial colonization, termed gut dysbiosis. Intestinal immaturity, antibiotic use and hospital microbial environment are the main triggers of this pathological process. Conversely, gut symbiosis is made possible by the presence of beneficial and commensal bacterial species that protect the immature gut from opportunistic pathogens overgrowth and inflammation. Herein, we review the relationships between gut microbiota and NEC in preterm neonates. We also discuss the role of specific microorganisms belonging to the commensal microbiota, highlighting the possibility for a toxigenic mechanism involved in NEC pathogenesis. We conclude on the importance of interventions aimed at providing or restoring beneficial bacteria populations, in view to efficiently preventing or treating NEC.},
-author = {Hosny, Michel and Cassir, Nadim and {La Scola}, Bernard},
-booktitle = {Human Microbiome Journal},
-doi = {10.1016/j.humic.2016.09.002},
-issn = {24522317},
-keywords = {Dysbiosis,Gut microbiota,Necrotizing enterocolitis,Toxins},
-pages = {14--19},
-title = {{Updating on gut microbiota and its relationship with the occurrence of necrotizing enterocolitis}},
-url = {http://xueshu.baidu.com/s?wd=paperuri{\%}3A{\%}282d82d09d328077d39e4ba5daeea21994{\%}29{\&}filter=sc{\_}long{\_}sign{\&}tn=SE{\_}xueshusource{\_}2kduw22v{\&}sc{\_}vurl=http{\%}3A{\%}2F{\%}2Fwww.sciencedirect.com{\%}2Fscience{\%}2Farticle{\%}2Fpii{\%}2FS2452231716300136{\&}ie=utf-8{\&}sc{\_}us=13946576663269307236},
-volume = {4},
-year = {2017}
+@article{hosny2017updating,
+  title={Updating on gut microbiota and its relationship with the occurrence of necrotizing enterocolitis},
+  author={Hosny, Michel and Cassir, Nadim and La Scola, Bernard},
+  journal={Human Microbiome Journal},
+  volume={4},
+  pages={14--19},
+  year={2017},
+  publisher={Elsevier}
 }
 @article{Rogers2016,
 author = {Rogers, G B and Keating, D J and Young, R L and Wong, M-L and Licinio, J and Wesselingh, S},
@@ -391,20 +381,15 @@ title = {{Acute Gastrointestinal Infection Induces Long-Lived Microbiota-Specifi
 volume = {337},
 year = {2012}
 }
-@article{Morrow2013,
-abstract = {BACKGROUND Necrotizing enterocolitis (NEC) is a devastating intestinal disease that afflicts 10{\%} of extremely preterm infants. The contribution of early intestinal colonization to NEC onset is not understood, and predictive biomarkers to guide prevention are lacking. We analyzed banked stool and urine samples collected prior to disease onset from infants {\textless}29 weeks gestational age, including 11 infants who developed NEC and 21 matched controls who survived free of NEC. Stool bacterial communities were profiled by 16S rRNA gene sequencing. Urinary metabolomic profiles were assessed by NMR. RESULTS During postnatal days 4 to 9, samples from infants who later developed NEC tended towards lower alpha diversity (Chao1 index, P = 0.086) and lacked Propionibacterium (P = 0.009) compared to controls. Furthermore, NEC was preceded by distinct forms of dysbiosis. During days 4 to 9, samples from four NEC cases were dominated by members of the Firmicutes (median relative abundance {\textgreater}99{\%} versus {\textless}17{\%} in the remaining NEC and controls, P {\textless} 0.001). During postnatal days 10 to 16, samples from the remaining NEC cases were dominated by Proteobacteria, specifically Enterobacteriaceae (median relative abundance {\textgreater}99{\%} versus 38{\%} in the other NEC cases and 84{\%} in controls, P = 0.01). NEC preceded by Firmicutes dysbiosis occurred earlier (onset, days 7 to 21) than NEC preceded by Proteobacteria dysbiosis (onset, days 19 to 39). All NEC cases lacked Propionibacterium and were preceded by either Firmicutes (≥98{\%} relative abundance, days 4 to 9) or Proteobacteria (≥90{\%} relative abundance, days 10 to 16) dysbiosis, while only 25{\%} of controls had this phenotype (predictive value 88{\%}, P = 0.001). Analysis of days 4 to 9 urine samples found no metabolites associated with all NEC cases, but alanine was positively associated with NEC cases that were preceded by Firmicutes dysbiosis (P {\textless} 0.001) and histidine was inversely associated with NEC cases preceded by Proteobacteria dysbiosis (P = 0.013). A high urinary alanine:histidine ratio was associated with microbial characteristics (P {\textless} 0.001) and provided good prediction of overall NEC (predictive value 78{\%}, P = 0.007). CONCLUSIONS Early dysbiosis is strongly involved in the pathobiology of NEC. These striking findings require validation in larger studies but indicate that early microbial and metabolomic signatures may provide highly predictive biomarkers of NEC.},
-author = {Morrow, Ardythe L and Lagomarcino, Anne J and Schibler, Kurt R and Taft, Diana H and Yu, Zhuoteng and Wang, Bo and Altaye, Mekibib and Wagner, Michael and Gevers, Dirk and Ward, Doyle V and Kennedy, Michael A and Huttenhower, Curtis and Newburg, David S},
-doi = {10.1186/2049-2618-1-13},
-issn = {2049-2618},
-journal = {Microbiome},
-month = {apr},
-number = {1},
-pages = {13},
-pmid = {24450576},
-title = {{Early microbial and metabolomic signatures predict later onset of necrotizing enterocolitis in preterm infants.}},
-url = {http://microbiomejournal.biomedcentral.com/articles/10.1186/2049-2618-1-13 http://www.ncbi.nlm.nih.gov/pubmed/24450576 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3971624},
-volume = {1},
-year = {2013}
+@article{morrow2013early,
+  title={Early microbial and metabolomic signatures predict later onset of necrotizing enterocolitis in preterm infants},
+  author={Morrow, Ardythe L and Lagomarcino, Anne J and Schibler, Kurt R and Taft, Diana H and Yu, Zhuoteng and Wang, Bo and Altaye, Mekibib and Wagner, Michael and Gevers, Dirk and Ward, Doyle V and others},
+  journal={Microbiome},
+  volume={1},
+  number={1},
+  pages={13},
+  year={2013},
+  publisher={BioMed Central}
 }
 @article{Mai2011a,
 abstract = {Intestinal luminal microbiota likely contribute to the etiology of necrotizing enterocolitis (NEC), a common disease in preterm infants. Microbiota development, a cascade of initial colonization events leading to the establishment of a diverse commensal microbiota, can now be studied in preterm infants using powerful molecular tools. Starting with the first stool and continuing until discharge, weekly stool specimens were collected prospectively from infants with gestational ages ≤32 completed weeks or birth weights≤1250 g. High throughput 16S rRNA sequencing was used to compare the diversity of microbiota and the prevalence of specific bacterial signatures in nine NEC infants and in nine matched controls. After removal of short and low quality reads we retained a total of 110,021 sequences. Microbiota composition differed in the matched samples collected 1 week but not {\textless}72 hours prior to NEC diagnosis. We detected a bloom (34{\%} increase) of Proteobacteria and a decrease (32{\%}) in Firmicutes in NEC cases between the 1 week and {\textless}72 hour samples. No significant change was identified in the controls. At both time points, molecular signatures were identified that were increased in NEC cases. One of the bacterial signatures detected more frequently in NEC cases (p{\textless}0.01) matched closest to $\gamma$-Proteobacteria. Although this sequence grouped to the well-studied Enterobacteriaceae family, it did not match any sequence in Genbank by more than 97{\%}. Our observations suggest that abnormal patterns of microbiota and potentially a novel pathogen contribute to the etiology of NEC.},
