--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -17,20 +17,20 @@
 
   \textbf{儿科炎症性疾病与肠道菌群紊乱}
     \begin{description}
-      \item[目的] To profile postpartum pattern progression of intestinal microbiome in these two diseases, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
-      \item[方法] 24 preterm newborns were enrolled, among whom four subsequently developed NEC, three LOS, and the remaining 17 were healthy controls. Starting from the first stool after birth and continuing till discharge, 192 longitudinal fecal samples were prospectively collected from all patients. Bacterial V3~V4 region of 16s rDNA from each stool sample were amplified and sequenced.
-      \item[结果] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). Potentially pathogenic genus Enterococcus (20.86\%) and Staphylococcus (8.67\%) were prominent in NEC patients and Klebsiella (42.15\%) in LOS group. Both NEC and control groups addressed higher proportion of Lactococcus (7.98\% and 13.76\%, respectively) than the control group (3.66\%).
-      \item[结论] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns. 
+      \item[目的]
+      \item[方法]
+      \item[结果]
+      \item[结论]
     \end{description}
 \end{abstract}
 
 \begin{englishabstract}
   \textbf{Patterened Intestinal Microbiota in Necrotizing Enterocolitis}
     \begin{description}
-      \item[AIM] 详细内容
-      \item[METHODS] 详细内容
-      \item[RESULTS] 详细内容
-      \item[CONCLUSIONS] 详细内容 \ldots
+      \item[AIM] To profile postpartum pattern progression of intestinal microbiome in these two diseases, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
+      \item[METHODS] 24 preterm newborns were enrolled, among whom four subsequently developed NEC, three LOS, and the remaining 17 were healthy controls. Starting from the first stool after birth and continuing till discharge, 192 longitudinal fecal samples were prospectively collected from all patients. Bacterial V3~V4 region of 16s rDNA from each stool sample were amplified and sequenced.
+      \item[RESULTS] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). Potentially pathogenic genus Enterococcus (20.86\%) and Staphylococcus (8.67\%) were prominent in NEC patients and Klebsiella (42.15\%) in LOS group. Both NEC and control groups addressed higher proportion of Lactococcus (7.98\% and 13.76\%, respectively) than the control group (3.66\%).
+      \item[CONCLUSIONS] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns. 
     \end{description}
 
   \textbf{Pediatric Enterocolitis in Association with Intestinal Microbiota}
