--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -51,15 +51,15 @@
       \item 恒温金属浴（型号TU-100C）：上海一恒科学仪器有限公司
       \item 小珠研磨器MiniBeatbeater™（型号-16）：美国BioSpec实验仪器设备公司。
       \item 台式高速冷冻离心机（型号5427R）：Eppendorf艾本德（上海）国际贸易有限公司
-      \item 移液器（型号：Eppendorf Reference® 2；规格：20 μl， 100 μl，200 μl L，1000 μl）：Eppendorf艾本德（上海）国际贸易有限公司
+      \item 移液器（型号：Eppendorf Reference\textsuperscript{\textregistered} 2；规格：20 μl， 100 μl，200 μl L，1000 μl）：Eppendorf艾本德（上海）国际贸易有限公司
       \item 移液器支架系统（The Eppendorf Pipette Holder System）：Eppendorf艾本德（上海）国际贸易有限公司
-      \item 自封式双层超滤芯吸头（型号Dualfilter T.I.P.S.® SealMax；规格：20 μl， 100 μl，200 μl，1000 μl）：Eppendorf艾本德（上海）国际贸易有限公司
+      \item 自封式双层超滤芯吸头（型号Dualfilter T.I.P.S.\textsuperscript{\textregistered} SealMax；规格：20 μl， 100 μl，200 μl，1000 μl）：Eppendorf艾本德（上海）国际贸易有限公司
       \item 漩涡混合器（型号：VORTEX-5：江苏省海门市其林贝尔仪器制造有限公司
       \item 2-8℃医用冷藏箱（型号：HYC-940（F））：中国海尔集团
       \item 超微量紫外线分光光度计（型号NanoDrop 2000C）：ThemoFisher赛默飞世尔科技（中国）有限公司
       \item PowerPac™ 通用电泳仪电源
-      \item 水平小型电泳槽（型号：Sub-Cell® 96）：BIO-RAD伯乐生命医学产品(上海)有限公司
-      \item ABI GeneAmp® PCR仪（型号： 9700）：ThemoFisher赛默飞世尔科技（中国）有限公司 美国应用生物系统中国公司
+      \item 水平小型电泳槽（型号：Sub-Cell\textsuperscript{\textregistered} 96）：BIO-RAD伯乐生命医学产品(上海)有限公司
+      \item ABI GeneAmp\textsuperscript{\textregistered} PCR仪（型号： 9700）：ThemoFisher赛默飞世尔科技（中国）有限公司 美国应用生物系统中国公司
       \item Tanon 4100 全自动数码凝胶图像分析系统：上海天能科技有限公司
       \item QUANTIFLUOR™荧光计仪（型号QUANTIFLUOR™ST/P）：Promega - 普洛麦格(北京)生物技术有限公司，上海盛兆生物科技有限公司。
       \item 16sRNA第二代高通量平台（Illumina Miseq）：Illumina中国
@@ -85,10 +85,10 @@
       \item 使用小珠研磨器MiniBeatbeater™垂直固定PowerBead管，以最大速度涡旋15分钟。（注意：1）标准时间为10分钟，但本课题使用24孔Beatbbeater™，故涡旋时间增加至15分钟；2）涡旋步骤对于完全均质化和细胞裂解是至关重要的。 通过来自步骤1-4的化学试剂和在该步骤引入的机械振荡的组合裂解细胞。 通过在破坏剂存在下随机摇动珠子，珠子与微生物细胞的机械震荡、碰撞将是的微生物细胞完全破裂。）
       \item 确保PowerBead管在离心机中无摩擦、可自由旋转。 在室温下以10,000xg离心1分钟。 （注意：1）转速不应超过10,000 x g，因为管子可能会破裂。2）标准流程离心时间为30秒，由于本课题所收取的样品量有时较多，经尝试，离心时间1分钟的离心效果较好。）
       \item 将第（6）步中收取的上清液转移至干净的2 ml收集管（试剂盒提供）中，该步骤上清液约500μl。
-      \item 将250μl溶液C2加入步骤（7）中的收集管中，然后涡旋5秒；在4°C环境中孵育5分钟。（溶液C2为 Inhibitor Removal Technology®（IRT），含有一种沉淀非DNA有机和无机物质的试剂，包括腐殖质，细胞碎片和蛋白质，同时可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。）
+      \item 将250μl溶液C2加入步骤（7）中的收集管中，然后涡旋5秒；在4°C环境中孵育5分钟。（溶液C2为 Inhibitor Removal Technology\textsuperscript{\textregistered}（IRT），含有一种沉淀非DNA有机和无机物质的试剂，包括腐殖质，细胞碎片和蛋白质，同时可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。）
       \item 在室温下，离心步骤（8）中的收集管，转速10，000 x g，离心时间1分钟。
       \item 将步骤（9）中收取的上清液（体积不多于600μl的）转移至新的干净的2 ml收集管（试剂盒提供）中，注意吸头避免碰触沉淀。（此时的沉淀含有非DNA有机和无机物质，包括腐殖酸，细胞碎片和蛋白质。为了获得最佳的DNA产量和质量，请避免转移任何沉淀。）
-      \item 将200μl溶液C3加入步骤（10）中的上清液中，并短暂涡旋。在4°C孵育5分钟。（溶液C3为 Inhibitor Removal Technology®，IRT），是另一种沉淀其他非DNA有机和无机物质的试剂，包括腐殖酸，细胞碎片和蛋白质，也可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。
+      \item 将200μl溶液C3加入步骤（10）中的上清液中，并短暂涡旋。在4°C孵育5分钟。（溶液C3为 Inhibitor Removal Technology\textsuperscript{\textregistered}，IRT），是另一种沉淀其他非DNA有机和无机物质的试剂，包括腐殖酸，细胞碎片和蛋白质，也可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。
       \item 在室温下，离心步骤（11）中的收集管，转速10，000 x g，离心时间1分钟。
       \item 将步骤（12）中收取的上清液（体积不多于750μl的）转移至新的干净的2 ml收集管（试剂盒提供）中，注意吸头避免碰触沉淀。（此时的沉淀含有非DNA有机和无机物质，包括腐殖酸，细胞碎片和蛋白质。为了获得最佳的DNA产量和质量，请避免转移任何沉淀。）
       \item 使用溶液C4前，将其轻轻摇匀。将1.2ml溶液C4加入步骤（13）中的收集管中（此步骤小心缓慢，避免溶液溢出收集管边缘），然后涡旋5秒。（溶液C4是高浓度盐溶液。 由于DNA在高盐浓度下与二氧化硅紧密结合，因此C4可以调节DNA溶液盐浓度，以使DNA（但可能仍然有低水平的非DNA有机和无机物质）与离心过滤管Spin Filter的滤膜结合。）
@@ -106,7 +106,7 @@
 
   \subsection{总DNA 16s rDNA V3-V4可变区片段的扩增}
   \label{总DNA 16s rDNA V3-V4可变区片段的扩增}
-  扩增区域为16 s rDNA V3-V4可变区，合成带有Illumina官方接头序列barcode的特异引物。扩增模版为上述提取的粪便样品总DNA。用338F (5’-ACTCCTACGGGAGGCAGCAG-3’)和806R (5’-GGACTACHVGGGTWTCTAAT-3’) 引物对V3-V4可变区进行PCR扩增，扩增程序为：95℃ 预变性3min，27个循环（95℃ 变性30s，55℃ 退火30s, 72℃ 延伸30s），最后72℃延伸 10min （PCR仪：ABI GeneAmp® 9700型）。扩增体系为20ul，4ul 5*FastPfu 缓冲液，2ul 2.5mM dNTPs， 0.8ul 引物（5uM）， 0.4ulFastPfu 聚合酶；10ng DNA模板。PCR 采用TransGen AP221-02：TransStart Fastpfu DNA Polymerase；PCR仪为ABI GeneAmp® 9700型。
+  扩增区域为16 s rDNA V3-V4可变区，合成带有Illumina官方接头序列barcode的特异引物。扩增模版为上述提取的粪便样品总DNA。用338F (5’-ACTCCTACGGGAGGCAGCAG-3’)和806R (5’-GGACTACHVGGGTWTCTAAT-3’) 引物对V3-V4可变区进行PCR扩增，扩增程序为：95℃ 预变性3min，27个循环（95℃ 变性30s，55℃ 退火30s, 72℃ 延伸30s），最后72℃延伸 10min （PCR仪：ABI GeneAmp\textsuperscript{\textregistered} 9700型）。扩增体系为20ul，4ul 5*FastPfu 缓冲液，2ul 2.5mM dNTPs， 0.8ul 引物（5uM）， 0.4ulFastPfu 聚合酶；10ng DNA模板。PCR 采用TransGen AP221-02：TransStart Fastpfu DNA Polymerase；PCR仪为ABI GeneAmp\textsuperscript{\textregistered} 9700型。
   扩增质控：为保证后续数据分析的准确性及可靠性，全部样品均按照正式实验条件进行，尽可能使用低循环数扩增，每例样本重复扩增3次，使用2\%琼脂糖凝胶回收PCR产物，利用AxyPrep DNA Gel Extraction Kit (Axygen Biosciences, Union City, CA, USA) 进行纯化，Tris-HCl洗脱，2\%琼脂糖电泳检测。为保证后续数据分析的准确性及可靠性，需满足两个条件，1) 尽可能使用低循环数扩增；2) 保证每个样本扩增的循环数一致。随机选取具有代表性的样本进行预实验，确保在最低循环数中使绝大多数样本能够扩增出浓度合适的产物。
   \subsection{荧光定量}
   \label{荧光定量}
@@ -229,9 +229,9 @@
 
   本研究最终选择24个充分采样的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型败血症LOS和17个匹配对照（表S1）；共收集192个样本，其中NEC标本47个，LOS标本44个，对照组标本101个，并进行16s rRNA 基因测序。
 
-  本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后16天（范围：11至19天），确诊为LOS的平均生命日为12天。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
+  本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后16天（范围：11至19天），确诊为LOS的平均生命日为12天（图\ref{fig:2dol}）。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
 
-  一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后败血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表S1）。
+  一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后败血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表\ref{tab:2demograph}）。
 
   根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
 
