--- a/thesis.tex
+++ b/thesis.tex
@@ -75,7 +75,8 @@
 % 附录内容，本科学位论文可以用翻译的文献替代。
 \include{tex/app_review}
 \include{tex/app_archive}
-%\include{tex/app_table}
+\include{tex/app_table}
+\include{tex/app_figure}
 
 
 \backmatter % 文后无编号部分
