--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -25,8 +25,8 @@
       \paragraph{入选标准}
       \paragraph{排除标准}
     \subsection{IBD入选及排除标准}
-      \paragraph{入选标准}
-      \paragraph{排除标准}
+      \paragraph{入选标准} 根据儿童和青少年炎症性肠病的诊断标准指南\cite{levine2014espghan}，初次诊断儿童克罗恩病和溃疡性结肠炎的患儿。
+      \paragraph{排除标准} 接受过肠管切除手术的患儿。
 
   \subsection{诊断标准}
 
