--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -396,11 +396,11 @@
           \end{figure}
 
 \section{讨论}
-在人类肠道黏膜中定植了超过10万亿个微生物\cite{Ley2006}，并在方方面面影响人类的健康\cite{Sekirov2009}。肠道微环境紊乱可能扰乱人体稳态并导致各种疾病，包括肥胖\cite{Liu2017}），IBD\cite{Ley2006}，心血管疾病\cite{Wang2011}，以及精神障碍\cite{Rogers2016}等。虽然早期细菌定植对人类健康的长期影响仍然缺乏证据，但它仍然是新生儿出生后健康或某些疾病易感性的重要因素。到目前为止，少有研究关注NEC菌群的纵向发展，另外，对于新生儿晚期败血症（Late-Onset Sepsis，LOS）的菌群研究也十分有限。近期有研究发现NEC的致病菌与梭菌（\textit{Clostridium})增殖相关\cite{Hosny2017a}。然而，特定病原体尚未确定；2013年的一项研究表明，在生命的4-9天内早期的生态失调可能与NEC病理生理学密切相关\cite{Morrow2013}。因此，为在菌群层面提供对其病因学的新见解，本研究致力于探究肠道菌群定植的发展模式，而非寻找单一病原体。
+在人类肠道黏膜中定植了超过10万亿个微生物\cite{Ley2006}，并在方方面面影响人类的健康\cite{Sekirov2009}。肠道微环境紊乱可能扰乱人体稳态并导致各种疾病，包括肥胖\cite{Liu2017}），IBD\cite{Ley2006}，心血管疾病\cite{Wang2011}，以及精神障碍\cite{Rogers2016}等。虽然早期细菌定植对人类健康的长期影响仍然缺乏证据，但它仍然是新生儿出生后健康或某些疾病易感性的重要因素。到目前为止，少有研究关注NEC菌群的纵向发展，另外，对于新生儿晚期败血症（Late-Onset Sepsis，LOS）的菌群研究也十分有限。近期有研究发现NEC的致病菌与梭菌（\textit{Clostridium})增殖相关\cite{hosny2017updating}。然而，特定病原体尚未确定；2013年的一项研究表明，在生命的4-9天内早期的生态失调可能与NEC病理生理学密切相关\cite{morrow2013early}。因此，为在菌群层面提供对其病因学的新见解，本研究致力于探究肠道菌群定植的发展模式，而非寻找单一病原体。
 
 本研究描述并比较了NEC和LOS早产儿及其匹配对照组出生后肠道菌群的定植模式的发展。我们对192个肠道标本中的16S rRNA基因进行了测序：包括NEC早产儿的46个标本，LOS早产儿的42个标本，以及对照组的103个标本。使用Illumina-MiSeq平台为所有样品生成了总共7,472,400个序列，并检测出一些在自然环境下较为稀有的OTU。
 
-与一项早期研究相反，本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{Panigrahi1996}，并增加细菌易位\cite{Deitch1987}。
+与一项早期研究相反，本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
 
 此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
