--- a/thesis.tex
+++ b/thesis.tex
@@ -20,6 +20,7 @@
 % 逐个导入参考文献数据库
 \addbibresource{bib/chap1.bib}
 \addbibresource{bib/chap2.bib}
+\addbibresource{bib/chap3.bib}
 \addbibresource{bib/review.bib}
 
 \input{tex/id}  % NOTE: the enclosed commands must be executed in preamble
