第三章开始谢啦
commmit from github desktop

--- a/tex/app_table.tex
+++ b/tex/app_table.tex
@@ -9,7 +9,7 @@
   \tiny
 \caption{NEC,LOS和对照组每名患儿基本情况} % title name of the table
 \centering % centering table
-\begin{tabular}{cccccccp{2cm}ccc} % creating 10 columns
+\begin{tabular}{ccccccp{2cm}p{2cm}cc} % creating 10 columns
 \hline\hline % inserting double-line
 Group & PatientID & Gender& Gestational Age(weeks) & Birth weight(g) & NEC Stage & Septic Pathogen & Diagnose Age(d) & ATB duration (d) & Length of Stay \\ [0.05ex]
 \hline % inserts single-line
