--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -3,7 +3,7 @@
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
 %%==================================================
-%% chapter01.tex for SJTU Master Thesis
+%% chap1intro.tex for SJTU Master Thesis
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
