--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -3,7 +3,7 @@
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
 %%==================================================
-%% chapter01.tex for SJTU Master Thesis
+%% chap2nec.tex for SJTU Master Thesis
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
@@ -26,7 +26,7 @@
   \subsection{诊断标准}
   关注每名患儿入院后的健康情况，评估并记录一般情况全身，腹部平片报告结果等，观察其是否发生NEC（II期和III期）或LOS。
 
-  坏死性小肠结肠炎NEC诊断和分级根据“改良Bell分级标准（24）”：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
+  坏死性小肠结肠炎NEC诊断和分级根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
 
   迟发型败血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：美罗培南等），则诊断为LOS。
 
