--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -3,7 +3,7 @@
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
 %%==================================================
-%% chapter01.tex for SJTU Master Thesis
+%% chap3compare.tex for SJTU Master Thesis
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
@@ -26,9 +26,9 @@
       \paragraph{排除标准}
     \subsection{IBD入选及排除标准}
       \paragraph{入选标准} 根据儿童和青少年炎症性肠病的诊断标准指南\cite{levine2014espghan}，初次诊断儿童克罗恩病和溃疡性结肠炎的患儿。
-      \paragraph{排除标准} 接受过肠管切除手术的患儿。
-
+      \paragraph{排除标准} 曾经接受过肠切除手术的患儿。
   \subsection{诊断标准}
+    炎症性肠病（IBD）的准确诊断应基于病史，体格检查和实验室检查，食管胃十二指肠镜检查（EGD）和组织学的回肠结肠镜检查以及小肠镜的组合。
 
   \subsection{主要实验室试剂及仪器}
   参照\ref{主要实验室试剂及仪器}
