--- a/bib/chap2.bib
+++ b/bib/chap2.bib
@@ -785,3 +785,14 @@ title = {{Neonatal necrotizing enterocolitis. Therapeutic decisions based upon c
 volume = {187},
 year = {1978}
 }
+
+@article{bell1978neonatal,
+  title={Neonatal necrotizing enterocolitis. Therapeutic decisions based upon clinical staging.},
+  author={Bell, Martin J and Ternberg, Jessie L and Feigin, Ralph D and Keating, James P and Marshall, Richard and Barton, Leslie and Brotherton, Thomas},
+  journal={Annals of surgery},
+  volume={187},
+  number={1},
+  pages={1},
+  year={1978},
+  publisher={Lippincott, Williams, and Wilkins}
+}
