--- a/thesis.tex
+++ b/thesis.tex
@@ -60,7 +60,8 @@
 \listofalgorithms
 \addcontentsline{toc}{chapter}{\listalgorithmname}  % 将算法目录加入全文目录
 
-\include{tex/symbol0} % 主要符号、缩略词对照表
+%\include{tex/symbol0} % 主要符号、缩略词对照表
+\include{tex/symbol00}
 
 \mainmatter % 使用阿拉伯数字对正文编号
 
