第三章写了一部分
哎。。。真凉。。。。

--- a/bib/chap3.bib
+++ b/bib/chap3.bib
@@ -8,3 +8,14 @@
   year={2014},
   publisher={LWW}
 }
+
+@article{elhalaby1995enterocolitis,
+  title={Enterocolitis associated with Hirschsprung's disease: a clinical-radiological characterization based on 168 patients},
+  author={Elhalaby, Essam A and Coran, Arnold G and Blane, Caroline E and Hirschl, Ronald B and Teitelbaum, Daniel H},
+  journal={Journal of pediatric surgery},
+  volume={30},
+  number={1},
+  pages={76--83},
+  year={1995},
+  publisher={Elsevier}
+}
