--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -69,7 +69,7 @@
     \begin{enumerate}
       \item 取得患儿监护人理解、同意并于知情同意书上签字。
       \item 准备无菌手套、干冰（置于密封盒中）、无菌塑料铲子、冻存管。
-      \item 待患儿排便后，带手套，使用塑料铲子，于肛门周围皮肤或尿布附近刮取粪便样本，置于冻存管内，约 1g。
+      \item 患儿排便30分钟内，带手套，使用塑料铲，于尿布附近刮取粪便样本，置于冻存管内，约 1g。
       \item 根据入组患儿编号和采集时间，对样本进行编号后立刻放入干冰盒中，30分钟内储存于-80℃冰箱中备用。
     \end{enumerate}
 
@@ -278,7 +278,7 @@
       \end{figure}
 
     \subsubsection{纲（class）水平}
-    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2phylum}）（图\ref{fig:2class}）。
+    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2class}）（图\ref{fig:2class}）。
       %纲水平配图
       \begin{figure}[!htp]
         \centering
@@ -314,7 +314,7 @@
       \end{figure}
 
     \subsubsection{属（genus）水平}
-    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷博菌在LOS组丰度最高（\%42.15），且三组丰度差异不显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.0.039）（图\ref{fig:2order}）。
+    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷博菌在LOS组丰度最高（\%42.15），且三组丰度差异不显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.0.039）（图\ref{fig:2genus}）。
       %属水平配图
       \begin{figure}[!htp]
         \centering
@@ -402,9 +402,9 @@
 
 与一项早期研究相反，本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
 
-此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
+此外，LOS组中显着的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于我们对败血症进展的理解并帮助制定战略性预防性解决方案。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
-\cite{Dutta2014}以及与医院相关事件相关的异常早期定植，包括机械通气和抗生素治疗\cite{Moles2013}。另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
+另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
 
 \section{结论}
 多年来，临床医生和科研工作者在不断努力探究NEC和LOS与肠道菌群的相关性。虽然尚未阐明特定的病原体或微生物模式，但现有的研究结果有助于改善临床策略，并最大限度地减少早产儿的并发症。
