--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -15,20 +15,26 @@
   \subsection{伦理}
   该研究经上海市儿童医学中心伦理联合委员会批准，上海交通大学医学院（SCMCIRB-K2013022）。 在采集每名患儿的粪便样本之前，取得其监护人理解、同意并于知情同意书上签字。
   \subsection{研究对象}
-  于2017年3月至2018年6月间，上海儿童医学中心新生儿重症监护病房（NICU）的NEC、外科病房的HAEC和上海市儿童医院消化科病房的IBD患儿，
+  于2017年3月至2018年6月间，上海儿童医学中心新生儿重症监护病房（NICU）的NEC患儿、外科病房的HD、HAEC患儿和上海市儿童医院消化科病房的IBD患儿，
     \subsubsection{NEC入选及排除标准}
       \paragraph{入组标准}
       胎龄小于34周，出生体重不低于950g的住院患儿。
       \paragraph{排除标准}
-      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
-    \subsection{HAEC入选及排除标准}
-      \paragraph{入选标准}
-      \paragraph{排除标准}
+      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50％的每日卡路里摄入量，且时间超过4天，7）静脉注射抗生素（除头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者
+    \subsection{HD和HAEC入选及排除标准}
+      \paragraph{入选标准} 1）病理确诊HD对患儿，确诊HAEC的患儿；2）需要接受手术治疗HD的患儿；3）年龄0～4岁。
+      \paragraph{排除标准} 1）合并其它疾病或畸形（如先天性心脏病、唐氏综合症等），2）入组前一周内接受过抗生素，3）入组前三个月内接受过益生菌制剂。
     \subsection{IBD入选及排除标准}
       \paragraph{入选标准} 根据儿童和青少年炎症性肠病的诊断标准指南\cite{levine2014espghan}，初次诊断儿童克罗恩病和溃疡性结肠炎的患儿。
       \paragraph{排除标准} 曾经接受过肠切除手术的患儿。
   \subsection{诊断标准}
-    炎症性肠病（IBD）的准确诊断应基于病史，体格检查和实验室检查，食管胃十二指肠镜检查（EGD）和组织学的回肠结肠镜检查以及小肠镜的组合。
+    坏死性小肠结肠炎(NEC)诊断和分级：关注每名患儿入院后的健康情况，评估并记录一般情况全身，腹部平片报告结果等；根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
+
+    先天性巨结肠（HD）根据Elhalaby临床诊断标准\cite{elhalaby1995enterocolitis}和Teitelbaum病理诊断为标准。
+
+    炎症性肠病（IBD）的准确诊断：基于病史，体格检查和实验室检查，食管胃十二指肠镜检查（EGD）和组织学的回肠结肠镜检查以及小肠镜的组合。
+
+
 
   \subsection{主要实验室试剂及仪器}
   参照\ref{主要实验室试剂及仪器}
